Hide scrollbars; fix blue background color

--- a/client/src/styles/components/_equipmentGrid.scss
+++ b/client/src/styles/components/_equipmentGrid.scss
@@ -3,7 +3,6 @@
 
 #er__equipmentGrid {
 
-    background-color: blue;
     box-sizing: border-box;
     // padding: 48px;
 
