--- a/client/src/styles/core/_base.scss
+++ b/client/src/styles/core/_base.scss
@@ -31,6 +31,7 @@ body {
 
 * {
     @include m.customScrollbar();
+    @include m.invisibleScrollbar();
     box-sizing: border-box !important;
     font-size: 15px;
     cursor: url(v.$image-cursor-default), auto;
